--- a/tokenization.ipynb
+++ b/tokenization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 122,
    "id": "93f0515c",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 123,
    "id": "fcf18ed6",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 124,
    "id": "af438a3c",
    "metadata": {},
    "outputs": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 125,
    "id": "24a9f5c5",
    "metadata": {},
    "outputs": [],
@@ -56,12 +56,12 @@
     "\n",
     "    def __init__(self, raw_text):\n",
     "        self.raw_text = raw_text\n",
-    "        self.tokens = self.get_tokens(raw_text)\n",
+    "        self.tokens = self.get_tokens(self.raw_text)\n",
     "\n",
     "    def get_tokens(self, text):\n",
     "        tokens = re.split(self.TOKEN_PATTERN, text)\n",
     "        tokens =[t.strip() for t in tokens if t.strip()]\n",
-    "        self.tokens = tokens.extend([self.END_OF_TEXT, self.UNKNOWN_TOKEN])\n",
+    "        self.tokens = tokens + [self.END_OF_TEXT, self.UNKNOWN_TOKEN]\n",
     "        self.idx_to_token = {i: t for i, t in enumerate(self.tokens)}\n",
     "        self.token_to_idx = {t: i for i, t in enumerate(self.tokens)}\n",
     "\n",
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 126,
    "id": "3aee35e2",
    "metadata": {},
    "outputs": [
@@ -87,8 +87,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Encoded text: [392, 689, 2826, 1002, 5114, 7]\n",
-      "Decoded text: Harry Potter is a wizard.\n"
+      "Encoded text: [54275, 50599, 51951, 54345, 40688, 54362, 54363]\n",
+      "Decoded text: Harry Potter is a wizard. <|endoftext|>\n"
      ]
     }
    ],
@@ -106,39 +106,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
-   "id": "1c3b5f33",
+   "execution_count": 129,
+   "id": "706497e3",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Encoded text: [392, 689, 2826, 1002, 5114, '<|unk|>', 7]\n"
-     ]
-    },
-    {
-     "ename": "KeyError",
-     "evalue": "'<|unk|>'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[116]\u001b[39m\u001b[32m, line 6\u001b[39m\n\u001b[32m      2\u001b[39m encoded = tokenizer.encode(text)\n\u001b[32m      4\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mEncoded text:\u001b[39m\u001b[33m\"\u001b[39m, encoded)\n\u001b[32m----> \u001b[39m\u001b[32m6\u001b[39m decoded = \u001b[43mtokenizer\u001b[49m\u001b[43m.\u001b[49m\u001b[43mdecode\u001b[49m\u001b[43m(\u001b[49m\u001b[43mencoded\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      7\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mDecoded text:\u001b[39m\u001b[33m\"\u001b[39m, decoded)\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[114]\u001b[39m\u001b[32m, line 30\u001b[39m, in \u001b[36mTokenizer.decode\u001b[39m\u001b[34m(self, indices)\u001b[39m\n\u001b[32m     29\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mdecode\u001b[39m(\u001b[38;5;28mself\u001b[39m, indices):\n\u001b[32m---> \u001b[39m\u001b[32m30\u001b[39m     tokens = [\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43midx_to_token\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m indices]\n\u001b[32m     31\u001b[39m     text = \u001b[33m\"\u001b[39m\u001b[33m \u001b[39m\u001b[33m\"\u001b[39m.join(tokens)\n\u001b[32m     32\u001b[39m     text = re.sub(\u001b[33mr\u001b[39m\u001b[33m'\u001b[39m\u001b[33m\\\u001b[39m\u001b[33ms([,.:;?\u001b[39m\u001b[33m\\\u001b[39m\u001b[33m-!\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m()\u001b[39m\u001b[38;5;130;01m\\'\u001b[39;00m\u001b[33m])\u001b[39m\u001b[33m'\u001b[39m, \u001b[33mr\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m\\\u001b[39m\u001b[33m1\u001b[39m\u001b[33m\"\u001b[39m, text)\n",
-      "\u001b[31mKeyError\u001b[39m: '<|unk|>'"
+      "Encoded text: [54275, '<|unk|>', 50599, 51951, 54345, 40688, 54362, 54363]\n"
      ]
     }
    ],
    "source": [
-    "text = \"Harry Potter is a wizard lalalal.\"\n",
+    "text = \"Harry sokokoko Potter is a wizard.\"\n",
     "encoded = tokenizer.encode(text)\n",
-    "\n",
-    "print(\"Encoded text:\", encoded)\n",
-    "\n",
-    "decoded = tokenizer.decode(encoded)\n",
-    "print(\"Decoded text:\", decoded)"
+    "print(\"Encoded text:\", encoded)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "555f66a6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
