--- a/tokenization.ipynb
+++ b/tokenization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 1,
    "id": "93f0515c",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 2,
    "id": "fcf18ed6",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 3,
    "id": "af438a3c",
    "metadata": {},
    "outputs": [
@@ -42,8 +42,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3b113de0",
+   "metadata": {},
+   "source": [
+    "# Classi Tokenizer"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 7,
    "id": "24a9f5c5",
    "metadata": {},
    "outputs": [],
@@ -68,7 +76,10 @@
     "    def encode(self, text):\n",
     "        tokens = re.split(self.TOKEN_PATTERN, text)\n",
     "        tokens = [t.strip() for t in tokens if t.strip()]\n",
-    "        return [self.token_to_idx.get(t, self.UNKNOWN_TOKEN) for t in tokens] + [self.token_to_idx[self.END_OF_TEXT]]\n",
+    "        return [\n",
+    "            self.token_to_idx.get(t, self.token_to_idx[self.UNKNOWN_TOKEN])\n",
+    "            for t in tokens\n",
+    "        ] + [self.token_to_idx[self.END_OF_TEXT]]\n",
     "\n",
     "    def decode(self, indices):\n",
     "        tokens = [self.idx_to_token[i] for i in indices]\n",
@@ -79,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 8,
    "id": "3aee35e2",
    "metadata": {},
    "outputs": [
@@ -106,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 14,
    "id": "706497e3",
    "metadata": {},
    "outputs": [
@@ -114,22 +125,76 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Encoded text: [54275, '<|unk|>', 50599, 51951, 54345, 40688, 54362, 54363]\n"
+      "Encoded text: [54275, 50599, 51951, 54263, 54354, 54364, 54362, 54363]\n",
+      "Decoded text: Harry Potter is in the <|unk|>. <|endoftext|>\n"
      ]
     }
    ],
    "source": [
-    "text = \"Harry sokokoko Potter is a wizard.\"\n",
+    "text = \"Harry Potter is in the palace.\"\n",
     "encoded = tokenizer.encode(text)\n",
-    "print(\"Encoded text:\", encoded)"
+    "print(\"Encoded text:\", encoded)\n",
+    "\n",
+    "decoded = tokenizer.decode(encoded)\n",
+    "print(\"Decoded text:\", decoded)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "555f66a6",
+   "cell_type": "markdown",
+   "id": "d8c243e4",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "# Byte pair encoding (BPE)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c291636e",
+   "metadata": {},
+   "source": [
+    "We have three types of tokenization:\n",
+    "\n",
+    "**1. Word-level Tokenization:** Splitting text into words based on spaces and punctuation. the problem with this type is out-of-vocabulary (OOV), as well as we might diffrent meaning of similar words for example `[play, played]` or `[boy, boys]`\n",
+    "\n",
+    "**2. Character based tokenization:** one the advantages of this approach is having small vocabulary size (~256 for english), however, the problem is that we lose the meaning associated with words, and the tokenized sequence is much longer   \n",
+    "\n",
+    "**3. SubWord-based tokenization:** in this approach we have initialy two rules\n",
+    "- Rule 1: do not split frequently used words into smaller subwords.\n",
+    "- Rule 2: split rare words into smaller meaningful subwords. (e.g played will be `played` and `ed`)\n",
+    "\n",
+    "So in general, sub-word tokenization helps the model learn that words with the same root word are similar in meaning e.g `token`, `tokens` and `tokenization`\n",
+    "\n",
+    "Also, It helps the model learn that `colenization` and `specialization` are made of diffrent root words but have same suffix `ization` and are used in similar syntactic situations.\n",
+    "\n",
+    "**Byte pair encoding (BPE)** is a sub-word tokenization algorithm\n",
+    "\n",
+    "*Example*: \n",
+    "let's say we have a dataset consists of these words\n",
+    "`{\"old\": 7, \"older\": 3, \"lowest\": 4, \"finest\": 9}`\n",
+    "- For the preprocessing step we add `<\\w>` at the end of each word:\n",
+    "    - `{\"old<\\w>\": 7, \"older<\\w>\": 3, \"lowest<\\w>\": 9, \"finest<\\w>\": 13}`\n",
+    "    - then make a character count table \n",
+    "    \n",
+    "    <img src=\"token-table-1.png\" width=\"400\">\n",
+    "\n",
+    "    then we look for the most frequent pair of tokens, we merge them and perform the same iteration again & again, until we reach the token limit or iteration limit, in the image below we found that the pair 'es' occur frequent times, so we add it as a new token then we update the occurences\n",
+    "\n",
+    "    <img src=\"token-table-2.png\" width=\"400\">\n",
+    "\n",
+    "    then we found that 'est' is most common\n",
+    "\n",
+    "    <img src=\"token-table-3.png\" width=\"400\">\n",
+    "\n",
+    "    then 'est<\\w>' *(Note that <\\w> helps the algorithm understand the diffrence between **est**imate and high**est**)*\n",
+    "\n",
+    "    <img src=\"token-table-4.png\" width=\"400\">  \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "42d57c1b",
+   "metadata": {},
    "source": []
   }
  ],
