--- a/tokenization.ipynb
+++ b/tokenization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 43,
    "id": "93f0515c",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 44,
    "id": "fcf18ed6",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 45,
    "id": "af438a3c",
    "metadata": {},
    "outputs": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 46,
    "id": "24a9f5c5",
    "metadata": {},
    "outputs": [],
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 47,
    "id": "3aee35e2",
    "metadata": {},
    "outputs": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 48,
    "id": "706497e3",
    "metadata": {},
    "outputs": [
@@ -188,14 +188,538 @@
     "    then 'est<\\w>' *(Note that <\\w> helps the algorithm understand the diffrence between **est**imate and high**est**)*\n",
     "\n",
     "    <img src=\"token-table-4.png\" width=\"400\">  \n",
+    "\n",
+    "\n",
+    "**(To be continued)**\n",
     "\n"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "42d57c1b",
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "8cabe71b",
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "import tiktoken"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "f4d7811a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokenizer = tiktoken.get_encoding(\"gpt2\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "5b1c030f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Encoded text: [15496, 703, 389, 345, 30, 220, 50256, 262, 6766, 318, 4171, 13]\n"
+     ]
+    }
+   ],
+   "source": [
+    "text = \"Hello how are you? <|endoftext|> the sky is blue.\"\n",
+    "\n",
+    "encoded = tokenizer.encode(text, allowed_special={\"<|endoftext|>\"})\n",
+    "print(\"Encoded text:\", encoded)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "c2703cfd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hello how are you? <|endoftext|> the sky is blue.'"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tokenizer.decode(encoded)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "47081e34",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[33901, 86, 343, 86, 220, 959]"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tokenizer.encode(\"Akwirw ier\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "8dd0e978",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ier'"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tokenizer.decode([959])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ee6eaeba",
+   "metadata": {},
+   "source": [
+    "## Data sampling with a sliding window"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "944a84e9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"Harry Potter and the Sorcerers Stone.txt\", \"r\", encoding=\"utf-8\") as file:\n",
+    "    raw_text = file.read()\n",
+    "\n",
+    "raw_text = raw_text[53:]\n",
+    "enc_text = tokenizer.encode(raw_text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "5f643266",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x : [22474, 6613, 284, 910]\n",
+      "y :      [6613, 284, 910, 326]\n"
+     ]
+    }
+   ],
+   "source": [
+    "context_size = 4\n",
+    "x = enc_text[:context_size]\n",
+    "y = enc_text[1:context_size+1]\n",
+    "print(f\"x : {x}\")\n",
+    "print(f\"y :      {y}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "aae924ad",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "context: [22474] ----> target: 6613\n",
+      "context: [22474, 6613] ----> target: 284\n",
+      "context: [22474, 6613, 284] ----> target: 910\n",
+      "context: [22474, 6613, 284, 910] ----> target: 326\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1, context_size + 1):\n",
+    "    context = enc_text[:i]\n",
+    "    target = enc_text[i]\n",
+    "    print(f\"context: {context} ----> target: {target}\") "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "a9a6d995",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "context: were ----> target:  proud\n",
+      "context: were proud ----> target:  to\n",
+      "context: were proud to ----> target:  say\n",
+      "context: were proud to say ----> target:  that\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1, context_size + 1):\n",
+    "    context = enc_text[:i]\n",
+    "    target = enc_text[i]\n",
+    "    print(f\"context: {tokenizer.decode(context)} ----> target: {tokenizer.decode([target])}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "97190e09",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "from torch.utils.data import Dataset, DataLoader\n",
+    "\n",
+    "class GPTDataset(Dataset):\n",
+    "    def __init__(self, text, tokenizer, max_length, stride):\n",
+    "        self.input_ids = []\n",
+    "        self.target_ids = []\n",
+    "\n",
+    "        token_ids = tokenizer.encode(text) # Tokenize the entire text\n",
+    "\n",
+    "        # Create input-target pairs using sliding window\n",
+    "        for i in range(0, len(token_ids) - max_length, stride):\n",
+    "            input_seq = token_ids[ i : i+max_length ]\n",
+    "            target_seq = token_ids[ i+1 : i+max_length+1 ]\n",
+    "            self.input_ids.append(torch.tensor(input_seq))\n",
+    "            self.target_ids.append(torch.tensor(target_seq))\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.input_ids)\n",
+    "    \n",
+    "    def __getitem__(self, index):\n",
+    "        return self.input_ids[index], self.target_ids[index]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7962239a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_data_loader(text, batch_size=4, max_length=256, stride=128, shuffle=True, drop_last=True, num_workers=0):\n",
+    "    \n",
+    "    tokenizer = tiktoken.get_encoding(\"gpt2\")\n",
+    "    dataset = GPTDataset(text, tokenizer, max_length, stride)\n",
+    "    dataloader = DataLoader(\n",
+    "        dataset,\n",
+    "        batch_size=batch_size,\n",
+    "        shuffle=shuffle,\n",
+    "        num_workers=num_workers,\n",
+    "        drop_last=drop_last # drops the last batch if it is shorter than the specified batch_size to prevent loss spikes during training\n",
+    "    )\n",
+    "\n",
+    "    return dataloader"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "6f946d51",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "first batch: [tensor([[  44,  374,   13,  290],\n",
+      "        [  13,  290, 9074,   13],\n",
+      "        [9074,   13,  360, 1834],\n",
+      "        [ 360, 1834, 1636,   11]]), tensor([[ 374,   13,  290, 9074],\n",
+      "        [ 290, 9074,   13,  360],\n",
+      "        [  13,  360, 1834, 1636],\n",
+      "        [1834, 1636,   11,  286]])]\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"Harry Potter and the Sorcerers Stone.txt\", \"r\", encoding=\"utf-8\") as file:\n",
+    "    raw_text = file.read()\n",
+    "\n",
+    "# If we set the stride equal to the input window size, we can prevent overlaps between the batches\n",
+    "dataloader = create_data_loader(raw_text, max_length=4, stride=2, shuffle=False)\n",
+    "\n",
+    "data_iter = iter(dataloader)\n",
+    "\n",
+    "first_batch = next(data_iter)\n",
+    "\n",
+    "print(f\"first batch: {first_batch}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "503d949a",
+   "metadata": {},
+   "source": [
+    "## Creating token embeddings"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6504ece0",
+   "metadata": {},
+   "source": [
+    "We initialize the embedding weights with random values as a preliminary step. This initialization serves as the starting point for the LLM's learning process. We will optimize the embedding weights later on."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "0f33404d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Parameter containing:\n",
+      "tensor([[ 0.3374, -0.1778, -0.1690],\n",
+      "        [ 0.9178,  1.5810,  1.3010],\n",
+      "        [ 1.2753, -0.2010, -0.1606],\n",
+      "        [-0.4015,  0.9666, -1.1481],\n",
+      "        [-1.1589,  0.3255, -0.6315],\n",
+      "        [-2.8400, -0.7849, -1.4096]], requires_grad=True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "inputs_ids = torch.tensor([2, 5, 3, 5])\n",
+    "\n",
+    "vocab_size = 6 \n",
+    "output_dim = 3 # embedding size\n",
+    "\n",
+    "torch.manual_seed(123)\n",
+    "embedding_layer = torch.nn.Embedding(vocab_size, output_dim)\n",
+    "print(embedding_layer.weight)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "78a9b946",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 1.2753, -0.2010, -0.1606],\n",
+       "        [-2.8400, -0.7849, -1.4096],\n",
+       "        [-0.4015,  0.9666, -1.1481],\n",
+       "        [-2.8400, -0.7849, -1.4096]], grad_fn=<EmbeddingBackward0>)"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "embedding_layer(inputs_ids)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4d30adeb",
+   "metadata": {},
+   "source": [
+    "## Encoding word positions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "01c3d5e2",
+   "metadata": {},
+   "source": [
+    "The self-attention mechanism , doesn't have a notion of position or order for the tokens within a sequence.\n",
+    "The way the previously introduced embedding layer works is that the same token ID always gets mapped to the same vector representation, regardless of where the token ID is\n",
+    "positioned in the input sequence."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0023e247",
+   "metadata": {},
+   "source": [
+    "Absolute positional embeddings are directly associated with specific positions in a sequence. For each position in the input sequence, a unique embedding is added to the\n",
+    "token's embedding to convey its exact location. For instance, the first token will have a specific positional embedding, the second token another distinct embedding, and so on"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e481655b",
+   "metadata": {},
+   "source": [
+    "Instead of focusing on the absolute position of a token, the emphasis of relative positional embeddings is on the relative position or distance between tokens. **This means the model\n",
+    "learns the relationships in terms of \"how far apart\" rather than \"at which exact position.**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "9f288ac4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Token IDs:\n",
+      " tensor([[   44,   374,    13,   290],\n",
+      "        [ 9074,    13,   360,  1834],\n",
+      "        [ 1636,    11,   286,  1271],\n",
+      "        [ 1440,    11,  4389, 16809],\n",
+      "        [ 9974,    11,   547,  6613],\n",
+      "        [  284,   910,   326,   484],\n",
+      "        [  547,  7138,  3487,    11],\n",
+      "        [ 5875,   345,   845,   881]])\n",
+      "Input shape: torch.Size([8, 4])\n"
+     ]
+    }
+   ],
+   "source": [
+    "vocab_size = tokenizer.n_vocab\n",
+    "output_dim = 256\n",
+    "\n",
+    "token_embedding_layer = torch.nn.Embedding(vocab_size, output_dim)\n",
+    "\n",
+    "max_length = 4\n",
+    "\n",
+    "dataloader = create_data_loader(\n",
+    "    text=raw_text,\n",
+    "    batch_size=8,\n",
+    "    max_length=max_length,\n",
+    "    stride=max_length,\n",
+    "    shuffle=False\n",
+    ")\n",
+    "\n",
+    "data_iter = iter(dataloader)\n",
+    "\n",
+    "inputs, targets = next(data_iter)\n",
+    "\n",
+    "print(f\"Token IDs:\\n {inputs}\")\n",
+    "print(f\"Input shape: {inputs.shape}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "4140640d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([8, 4, 256])"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "token_embedding = token_embedding_layer(inputs)\n",
+    "token_embedding.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "18a1289d",
+   "metadata": {},
+   "source": [
+    "The input to the pos_embeddings is usually a placeholder vector torch.arange(context_length), which contains a sequence of\n",
+    "numbers 0, 1, ..., up to the maximum input length − 1. The context_length is a variable\n",
+    "that represents the supported input size of the LLM. Here, we choose it similar to the\n",
+    "maximum length of the input text. In practice, input text can be longer than the supported\n",
+    "context length, in which case we have to truncate the text."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f29dda3d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([4, 256])\n"
+     ]
+    }
+   ],
+   "source": [
+    "context_length = max_length\n",
+    "pos_embedding_layer = torch.nn.Embedding(context_length, output_dim)\n",
+    "pos_embeddings = pos_embedding_layer(torch.arange(context_length))\n",
+    "print(pos_embeddings.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "becda4df",
+   "metadata": {},
+   "source": [
+    "As we can see, the positional embedding tensor consists of four 256-dimensional vectors.\n",
+    "We can now add these directly to the token embeddings, where PyTorch will add the 4x256-\n",
+    "dimensional pos_embeddings tensor to each 4x256-dimensional token embedding tensor in\n",
+    "each of the 8 batches:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "id": "5a41382a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_embeddings = token_embedding + pos_embeddings"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9928e940",
+   "metadata": {},
+   "source": [
+    "**While token embeddings provide consistent vector representations for\n",
+    "each token, they lack a sense of the token's position in a sequence. To\n",
+    "rectify this, two main types of positional embeddings exist: absolute and\n",
+    "relative. OpenAI's GPT models utilize absolute positional embeddings that\n",
+    "are added to the token embedding vectors and are optimized during the\n",
+    "model training.**"
+   ]
   }
  ],
  "metadata": {
